--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>jQuery Homework</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
@@ -13,5 +13,6 @@
 
 
     <script src="js/main.js"></script>
+    <script src="js/jquery-3.2.0.min.js"></script>
 </body>
 </html>
